# testesvagas

./: .gitignore  README.md
cotabest/: .gitignore  Dockerfile  Makefile  Readme.md  env.sh  input.json  pyproject.toml
cotabest/migrations/versions/: be6d50cd8486_.py
cotabest/src/: app.py  config.py  db.py  develop.db  swagger.py  utils.py
cotabest/src/controllers/: __init__.py  cart.py  product.py  sales.py
cotabest/src/models/: __init__.py  cart.py  product.py  sales.py  user.py
cotabest/src/services/: cart.py  product.py  sales.py
cotabest/test/: conftest.py  mocks.py  test_cart.py  test_products.py  test_sales.py
gx2/: README.md
gx2/car_insurance/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
gx2/car_insurance/app/: main.py
gx2/car_insurance/app/common/: __init__.py  usecase.py
gx2/car_insurance/app/config/: config.py  logger.py
gx2/car_insurance/app/modules/calculator/domain/: value_objects.py
gx2/car_insurance/app/modules/calculator/presentation/: __init__.py  request.py  response.py
gx2/car_insurance/app/modules/calculator/usecase/: __init__.py
gx2/car_insurance/app/modules/calculator/usecase/post_calculate/: api.py  impl.py  service.py
gx2/car_insurance/tests/: conftest.py
gx2/car_insurance/tests/modules/calculator/domain/: test_value_objects.py
gx2/car_insurance/tests/modules/calculator/presentation/: test_models.py
gx2/car_insurance/tests/modules/calculator/usecase/post_calculate/: test_base_service.py  test_service.py
maistodos/: .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml
maistodos/.github/: FUNDING.yml  pull_request_template.md
maistodos/.github/workflows/: ci.yml
maistodos/api/: .gitignore  Makefile  asgi.py  pyproject.toml
maistodos/api/app/: __init__.py  config.py
maistodos/api/app/db/: crud.py  model.py
maistodos/api/app/routes/: __init__.py
maistodos/api/app/routes/v1/: __init__.py
maistodos/api/app/views/: __init__.py  credit_card.py  health.py
maistodos/api/scripts/: lint.sh  test.sh
maistodos/app/: __init__.py  config.py  utils.py
maistodos/app/db/: crud.py  repository.py  schema.py
maistodos/app/routes/v1/: __init__.py
maistodos/app/views/: __init__.py  health.py
maistodos/challenge/: README.md
maistodos/docs/: index.md
maistodos/docs/api/: base.md  db.md  routes.md  swagger.md  views.md
maistodos/docs/templates/: challenge.md  instalacao.md
maistodos/scripts/: pre-commit.sh
outsera/razzie_api/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
outsera/razzie_api/app/: __init__.py  config.py  models.py
outsera/razzie_api/app/controllers/: award_controller.py
outsera/razzie_api/app/services/: award_service.py  data_loader.py
outsera/razzie_api/tests/: conftest.py  test_integration.py
rgrtechnologia/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements-dev.txt  setup.py
rgrtechnologia/pagescrap/: __init__.py  __main__.py  pages_spider.py  utils.py
