[tool.poetry]
name = "@maistodos/api"
version = "0.1.0"
description = "maistodos challenge for senior backend vacancy"
authors = ["zejr <zejunior.py@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "@maistodos"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
