[project]
name = "razzie-api"
version = "0.1.0"
description = ""
authors = [{ name = "zevjr", email = "zejunior.py@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask (>=3.1.0,<4.0.0)",
  "sqlalchemy (>=2.0.38,<3.0.0)",
  "flask-sqlalchemy (>=3.1.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipdb = "^0.13.13"
ipython = "^8.32.0"
pytest-cov = "^6.0.0"
coverage = "^7.6.12"
blue = "^0.9.1"
isort = "^6.0.1"
pre-commit = "^4.1.0"
